--- a/style.css
+++ b/style.css
@@ -1,18 +1,66 @@
-/*
-Mofication of Responsive Child Theme
+/* 
+Theme Name: Sacred Gifts
+Theme URI: http://cyberchimps.com/responsive-theme/
+Description: Responsive Theme is a flexible foundation with fluid grid system that adapts your website to mobile devices and the desktop or any other viewing environment. Theme features 9 Page Templates, 11 Widget Areas, 6 Template Layouts, 4 Menu Positions and more. Powerful but simple Theme Options for full CMS control with easy Logo Upload, Social Networking and Webmaster Tools etc. Responsive is WooCommerce Compatible, Multilingual Ready (WPML), RTL-Language Support, Retina-Ready, Search Engine Friendly, W3C Markup Validated and currently translated into 40 languages. Cross-Browser compatible. No paid memberships or clubs to get Responsive help. http://cyberchimps.com/forum/free/responsive/
+
+Version: 1.9.3.6
+Author: CyberChimps.com
+Author URI: http://cyberchimps.com
+Tags: white, black, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, left-sidebar, right-sidebar, flexible-width, theme-options, threaded-comments, full-width-template, sticky-post, translation-ready, flexible-width, rtl-language-support
+
+Text Domain: responsive
+
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+
+Responsive WordPress Theme, Copyright (C) 2003-2013 Emil Uzelac, CyberChimps Inc
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+--------------------------------------------------------------
+WARNING: (BEFORE YOU MAKE ANY CHANGES)
+--------------------------------------------------------------
+Please do not edit style.css or any other Theme files or 
+Templates directly. If you do, your customizations will be lost 
+as soon as you update Responsive.
+
+WordPress and ThemeID highly recommends Child Theme.
+
+Read More:
+
+- http://codex.wordpress.org/Child_Themes  
+- http://themeid.com/docs/child-theme-example/
+- http://themeid.com/docs/category/child-theme/
+
+--------------------------------------------------------------
+
+CSS Rules: Sorted alphabetically for better organization.
 */
-/* line 12, style.scss */
+/* =Reset CSS (v2.0) http://meyerweb.com/eric/tools/css/reset/
+-------------------------------------------------------------- */
+/* line 58, style.scss */
 body {
   background: #f7f2e9;
   color: #000000;
 }
 
-/* line 23, style.scss */
+/* line 69, style.scss */
 .menu {
   background-color: transparent;
 }
 
-/* line 31, style.scss */
+/* line 77, style.scss */
 #text-2 {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -32,24 +80,24 @@ body {
   max-height: 125px;
 }
 
-/* line 46, style.scss */
+/* line 92, style.scss */
 #text-2 h1 {
   border-bottom-width: 4px;
   border-color: #f7f2e9;
 }
 
-/* line 51, style.scss */
+/* line 97, style.scss */
 #text-2 a {
   color: #f7f2e9;
 }
 
-/* line 55, style.scss */
+/* line 101, style.scss */
 #text-4 {
   min-height: 125px;
   max-height: 125px;
 }
 
-/* line 60, style.scss */
+/* line 106, style.scss */
 .widget-wrapper {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -64,7 +112,7 @@ body {
   padding: 20px;
 }
 
-/* line 71, style.scss */
+/* line 117, style.scss */
 .testimonials-widget-testimonials2 {
   color: #000000;
   overflow: scroll;
@@ -73,13 +121,13 @@ body {
   padding: 0px;
 }
 
-/* line 80, style.scss */
+/* line 126, style.scss */
 .widget-title,
 .widget-title-home h3 {
   display: none;
 }
 
-/* line 88, style.scss */
+/* line 134, style.scss */
 #featured {
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
@@ -95,18 +143,18 @@ body {
   width: 99.893617021277%;
 }
 
-/* line 99, style.scss */
+/* line 145, style.scss */
 #featured-image {
   margin: 0 0 0 0;
 }
 
-/* line 107, style.scss */
+/* line 153, style.scss */
 blockquote {
   background-color: transparent;
   border-left-width: 0px;
 }
 
-/* line 116, style.scss */
+/* line 162, style.scss */
 .site-info {
   background-color: #d3cfca;
   color: #000000;
