--- a/style.css
+++ b/style.css
@@ -9,14 +9,22 @@ Author URI: https://cyberchimps.com/
 License: GNU General Public License
 License URI: license.txt
 
+
+
+
 */
-/* line 18, style.scss */
+/* line 21, style.scss */
+html {
+  background: #d3cfca;
+}
+
+/* line 25, style.scss */
 body {
   background: #f7f2e9;
   color: #000000;
 }
 
-/* line 29, style.scss */
+/* line 36, style.scss */
 #logo a {
   width: 250px;
   height: 65px;
@@ -24,17 +32,17 @@ body {
   background: transparent url("img/sacred_gifts_logo.svg") top left no-repeat;
 }
 
-/* line 43, style.scss */
+/* line 50, style.scss */
 .menu {
   background-color: transparent;
 }
 
-/* line 46, style.scss */
+/* line 53, style.scss */
 a {
   color: #974b35;
 }
 
-/* line 55, style.scss */
+/* line 62, style.scss */
 .widget-wrapper {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -46,7 +54,7 @@ a {
   padding: 20px;
 }
 
-/* line 66, style.scss */
+/* line 73, style.scss */
 #tickets-button {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -62,18 +70,23 @@ a {
   max-height: 125px;
 }
 
-/* line 81, style.scss */
+/* line 88, style.scss */
 #tickets-button a {
   color: #f7f2e9;
 }
 
-/* line 85, style.scss */
+/* line 92, style.scss */
 #download-app {
   min-height: 125px;
   max-height: 125px;
 }
 
-/* line 90, style.scss */
+/* line 97, style.scss */
+#download-app h3 {
+  line-height: 18px;
+}
+
+/* line 101, style.scss */
 .testimonials-widget-testimonials2 {
   color: #000000;
   overflow: scroll;
@@ -82,13 +95,13 @@ a {
   padding: 0px;
 }
 
-/* line 99, style.scss */
+/* line 110, style.scss */
 .widget-title,
 .widget-title-home h3 {
   display: none;
 }
 
-/* line 107, style.scss */
+/* line 118, style.scss */
 #featured {
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
@@ -100,29 +113,50 @@ a {
   width: 99.893617021277%;
 }
 
-/* line 118, style.scss */
-#featured-image {
-  margin: 0 0 0 0;
+/* line 129, style.scss */
+.featured-title {
+  display: none;
 }
 
-/* line 126, style.scss */
+/* line 133, style.scss */
+#featured p {
+  font-size: 14px;
+  font-weight: 200;
+  line-height: 18px;
+  padding: 0 0px 0 0px;
+  text-align: center;
+}
+
+/* line 141, style.scss */
+#artist-title p {
+  font-size: 24px;
+  padding: 0 40px 0 40px;
+}
+
+/* line 146, style.scss */
+#featured-image {
+  margin: 0 0 0 20px;
+}
+
+/* line 154, style.scss */
 blockquote {
   background-color: transparent;
   border-left-width: 0px;
 }
 
-/* line 135, style.scss */
+/* line 163, style.scss */
 .site-info {
   background-color: #d3cfca;
   color: #000000;
   min-height: 3em;
   margin-top: -1em;
+  margin: 0 0 0 0;
 }
 
 /*
  * Image replacement
  */
-/* line 149, style.scss */
+/* line 178, style.scss */
 .ir {
   background-color: transparent;
   border: 0;
@@ -131,7 +165,7 @@ blockquote {
   *text-indent: -9999px;
 }
 
-/* line 157, style.scss */
+/* line 186, style.scss */
 .ir:before {
   content: "";
   display: block;
