--- a/style.scss
+++ b/style.scss
@@ -54,7 +54,6 @@ a {
   color: #974b35
 }
 
-
 //===================
 //   WIDGET
 //===================
@@ -92,10 +91,13 @@ a {
 #download-app {
   min-height: 125px;
   max-height: 125px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#download-app h3 {
-  line-height: 18px
+.download-app-wrapper {
+  margin: auto;
 }
 
  .testimonials-widget-testimonials2 {
@@ -103,7 +105,10 @@ a {
   overflow: scroll;
   min-height: 125px;
   max-height: 125px;
-  padding: 0px
+  padding: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 400px;
 }
 
 
@@ -166,6 +171,10 @@ blockquote {
   min-height: 3em;
   margin-top: -1em;
   margin: 0 0 0 0;
+}
+
+.site-info a {
+  color: #000000;
 }
 
 
