--- a/style.scss
+++ b/style.scss
@@ -23,8 +23,8 @@ html {
 }
 
 body {
-	background: #d9d5d0;
-  color: #000000;
+	background: #d7d5d0;
+  color: #777777;
 }
 
 .front-page #wrapper {
@@ -52,6 +52,10 @@ body {
   background-color:#998158;
 }
 
+#header-width {
+  max-width: 960px;
+  margin: auto;
+}
 
 
 //====================
@@ -59,11 +63,53 @@ body {
 //====================
 
 .menu {
-  background-color:transparent;
+  background-color: #998158;
+  background-image: none;
+/*  background-image: -webkit-linear-gradient(top, #585858, #3d3d3d);
+  background-image: -moz-linear-gradient(top, #585858, #3d3d3d);
+  background-image: -ms-linear-gradient(top, #585858, #3d3d3d);
+  background-image: -o-linear-gradient(top, #585858, #3d3d3d);
+  background-image: linear-gradient(top, #585858, #3d3d3d); */
+  clear: both;
+//  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#585858, endColorstr=#3d3d3d);
+  margin: 0 auto;
 }
-a {
-  color: #974b35
+
+
+.menu a {
+  border-left: 0px;
+  color: #f7f2e9;
+  cursor: pointer;
+  display: block;
+  font-size: 13px;
+  font-weight: 700;
+  height: 45px;
+  line-height: 45px;
+  margin: 0;
+  padding: 0 0.9em;
+  position: relative;
+  text-decoration: none;
+  text-shadow: none;
+  white-space: nowrap;
 }
+
+.menu a:hover {
+  background-color: transparent;
+  background-image: none;
+  color: #ffffff;
+}
+
+ul.menu > li:hover {
+  background-color: transparent;
+  color: #ffffff;
+}
+
+.menu .current_page_item a,
+.menu .current-menu-item a {
+  background-color: transparent;
+}
+
+
 
 //===================
 //   WIDGET
@@ -72,15 +118,15 @@ a {
 .widget-wrapper {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
-  background-color: #f9f9f9;
+  background-color: #c9c5c0;
   border-width: 0 0 0 0;
-  background: transparent url('img/radial_gradient.svg') -5% -15% no-repeat;
+//  background: transparent url('img/radial_gradient.svg') -5% -15% no-repeat;
   border-radius: 0px;
   margin: 0 0 20px;
   padding: 20px;
 }
 
-#tickets-button {
+/*#tickets-button {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   background-color: #974b35;
@@ -94,25 +140,30 @@ a {
   min-height: 125px;
   max-height: 125px;
 }
+*/
+
+#tickets-button {
+  min-height: 125px;
+}
 
 #tickets-button a {
-  color: #f7f2e9;
+  color: #777777;
 }
 
 #download-app {
   min-height: 125px;
   max-height: 125px;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
 
-.download-app-wrapper {
+#app-download-wrapper {
+  width: 165px;
   margin: auto;
 }
 
  .testimonials-widget-testimonials2 {
-  color: #000000;
+  color: #777777;
   overflow: scroll;
   min-height: 125px;
   max-height: 125px;
@@ -135,8 +186,8 @@ a {
 #featured {
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
-  background-color: #d3cfca;
-  background: transparent url('img/radial_gradient.svg') top left no-repeat;
+  background-color: #c9c5c0;
+//  background: transparent url('img/radial_gradient.svg') top left no-repeat;
   border: 0px solid #e5e5e5;
   border-radius: 0px;
   padding-bottom: 0px;
@@ -153,13 +204,15 @@ a {
   line-height: 18px;
   padding: 0 0px 0 0px;
   text-align: center;
+  max-width: 400px;
+  margin: auto;
 }
 
 #featured hr {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
   height: 1px;
-  color: #000000;
+  color: #898888;
   background-color: #000000;
   line-height: 1px;
 }
@@ -176,6 +229,26 @@ a {
 
 #featured-image {
   margin: 0 20px 0 20px;
+}
+
+#featured.grid.col-300 {
+  margin-right: 0px;
+}
+
+//=================
+//      BODY
+//=================
+
+#wrapper {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  background-color: #c9c5c0;
+  border: none;
+  border-radius: 0px;
+  clear: both;
+  margin: 20px auto 20px auto;
+  padding: 0 20px 20px 20px;
+  position: relative;
 }
 
 //===================
@@ -205,17 +278,22 @@ blockquote {
 
 //}
 
+.site-info {
+  color: #f7f2e9;
+}
+
 .site-info.footer p {
   position: relative;
   left: 50%;
 }
 
 .site-info a {
-  color: #d9d5d0;
+  color: #f7f2e9;
 }
 
 .footer {
   display: block;
+  max-width: 960px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
