--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 /* line 34, style.scss */
 #wrapper {
-  margin: 20px 0px 0px 0px;
+  margin: 20px 0px 40px 0px;
 }
 
 /* line 43, style.scss */
@@ -45,15 +45,16 @@ body {
 /* line 51, style.scss */
 #header {
   background-color: #998158;
+  box-shadow: -2px 5px 20px #93928f;
 }
 
-/* line 55, style.scss */
+/* line 56, style.scss */
 #header-width {
   max-width: 960px;
   margin: auto;
 }
 
-/* line 65, style.scss */
+/* line 66, style.scss */
 .menu {
   background-color: #998158;
   background-image: none;
@@ -66,14 +67,14 @@ body {
   margin: 0 auto;
 }
 
-/* line 79, style.scss */
+/* line 80, style.scss */
 .menu a {
   border-left: 0px;
   color: #f7f2e9;
   cursor: pointer;
   display: block;
   font-size: 13px;
-  font-weight: 700;
+  font-weight: 400;
   height: 45px;
   line-height: 45px;
   margin: 0;
@@ -82,28 +83,74 @@ body {
   text-decoration: none;
   text-shadow: none;
   white-space: nowrap;
+  text-transform: uppercase;
 }
 
-/* line 96, style.scss */
+/* line 98, style.scss */
 .menu a:hover {
   background-color: transparent;
   background-image: none;
   color: #ffffff;
 }
 
-/* line 102, style.scss */
+/* line 104, style.scss */
 ul.menu > li:hover {
   background-color: transparent;
   color: #ffffff;
 }
 
-/* line 107, style.scss */
+/* line 110, style.scss */
 .menu .current_page_item a,
 .menu .current-menu-item a {
   background-color: transparent;
 }
 
-/* line 118, style.scss */
+/* line 115, style.scss */
+.menu li li {
+  background: #974B35;
+  background-image: none;
+  border: 0px;
+  color: #f7f2e9;
+  filter: none;
+  margin: -1px 0 1px 0;
+  width: auto;
+}
+
+/* line 125, style.scss */
+.menu li li a {
+  background: transparent !important;
+  border: none;
+  color: #f7f2e9;
+  font-size: 12px;
+  font-weight: 400;
+  height: auto;
+  height: 20px;
+  line-height: 20px;
+  padding: 5px 10px;
+  text-shadow: none;
+  white-space: nowrap;
+}
+
+/* line 139, style.scss */
+.menu li li a:hover {
+  background: #974B35 !important;
+  background-image: none;
+  border: none;
+  color: #FFFFFF;
+  filter: none;
+  font-weight: 700;
+}
+
+/* line 152, style.scss */
+.sub-header-menu {
+  background-color: #974B35;
+  border: 0px;
+  border-top: none;
+  clear: both;
+  margin: 0 auto;
+}
+
+/* line 165, style.scss */
 .widget-wrapper {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -129,17 +176,17 @@ ul.menu > li:hover {
   max-height: 125px;
 }
 */
-/* line 145, style.scss */
+/* line 192, style.scss */
 #tickets-button {
   min-height: 125px;
 }
 
-/* line 149, style.scss */
+/* line 196, style.scss */
 #tickets-button a {
   color: #777777;
 }
 
-/* line 153, style.scss */
+/* line 200, style.scss */
 #download-app {
   min-height: 125px;
   max-height: 125px;
@@ -147,13 +194,29 @@ ul.menu > li:hover {
   margin: auto;
 }
 
-/* line 160, style.scss */
+/* line 207, style.scss */
 #app-download-wrapper {
-  width: 165px;
   margin: auto;
+  max-width: 500px;
+  min-width: 266px;
+  display: inline-block;
 }
 
-/* line 165, style.scss */
+/* line 215, style.scss */
+#left {
+  height: 100px;
+  float: left;
+  width: 33%;
+}
+
+/* line 221, style.scss */
+#right {
+  height: 100px;
+  float: left;
+  width: 67%;
+}
+
+/* line 227, style.scss */
 .testimonials-widget-testimonials2 {
   color: #777777;
   overflow: scroll;
@@ -162,16 +225,16 @@ ul.menu > li:hover {
   padding: 0px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 400px;
+  max-width: 500px;
 }
 
-/* line 177, style.scss */
+/* line 239, style.scss */
 .widget-title,
 .widget-title-home h3 {
   display: none;
 }
 
-/* line 186, style.scss */
+/* line 248, style.scss */
 #featured {
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
@@ -182,12 +245,12 @@ ul.menu > li:hover {
   width: 99.893617021277%;
 }
 
-/* line 197, style.scss */
+/* line 259, style.scss */
 .featured-title {
   display: none;
 }
 
-/* line 201, style.scss */
+/* line 263, style.scss */
 #featured p {
   font-size: 14px;
   font-weight: 200;
@@ -198,7 +261,7 @@ ul.menu > li:hover {
   margin: auto;
 }
 
-/* line 211, style.scss */
+/* line 273, style.scss */
 #featured hr {
   margin: 0 0 0 0;
   padding: 0 0 0 0;
@@ -208,29 +271,29 @@ ul.menu > li:hover {
   line-height: 1px;
 }
 
-/* line 220, style.scss */
+/* line 282, style.scss */
 #artist-title p {
   font-size: 24px;
   padding: 0 40px 0 40px;
 }
 
-/* line 225, style.scss */
+/* line 287, style.scss */
 #featured-subtitle img {
   vertical-align: middle;
   display: block;
 }
 
-/* line 230, style.scss */
+/* line 292, style.scss */
 #featured-image {
   margin: 0 20px 0 20px;
 }
 
-/* line 234, style.scss */
-#featured.grid.col-300 {
+/* line 296, style.scss */
+#container#wrapper#featured.grid.col-300 {
   margin-right: 0px;
 }
 
-/* line 242, style.scss */
+/* line 304, style.scss */
 #wrapper {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -243,78 +306,92 @@ ul.menu > li:hover {
   position: relative;
 }
 
-/* line 258, style.scss */
+/* line 316, style.scss */
+.post-meta {
+  display: none;
+}
+
+/* line 324, style.scss */
 blockquote {
   background-color: transparent;
   border-left-width: 0px;
 }
 
-/* line 281, style.scss */
+/* line 347, style.scss */
 .site-info {
   color: #f7f2e9;
+  box-shadow: 0px -5px 20px #93928f;
 }
 
-/* line 285, style.scss */
+/* line 352, style.scss */
 .site-info.footer p {
   position: relative;
   left: 50%;
 }
 
-/* line 290, style.scss */
+/* line 357, style.scss */
 .site-info a {
   color: #f7f2e9;
 }
 
-/* line 294, style.scss */
+/* line 361, style.scss */
 .footer {
   display: block;
   max-width: 960px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
+  margin-bottom: 20px;
   text-align: center;
+  padding: 0px 20px 0px 20px;
+  vertical-align: middle;
+  box-shadow: 0px -5px 20px #93928f;
 }
 
-/* line 304, style.scss */
+/* line 375, style.scss */
 .footer-1 {
   display: block;
   width: 25%;
   float: left;
-  min-width: 150px;
-  max-width: 240px;
+  min-width: 200px;
+  vertical-align: top;
+  padding: 0px 0px 10px 0px;
 }
 
-/* line 313, style.scss */
+/* line 386, style.scss */
 .footer-2 {
   display: block;
-  width: 25%;
+  width: 20%;
   float: left;
   min-width: 150px;
-  max-width: 240px;
+  vertical-align: middle;
+  padding: 10px 0px 10px 0px;
 }
 
-/* line 321, style.scss */
+/* line 396, style.scss */
 .footer-3 {
   display: block;
-  width: 25%;
+  width: 30%;
   float: left;
   min-width: 150px;
-  max-width: 240px;
+  vertical-align: middle;
+  padding: 10px 0px 10px 0px;
 }
 
-/* line 329, style.scss */
+/* line 406, style.scss */
 .footer-4 {
   display: block;
   width: 25%;
   float: left;
   min-width: 150px;
-  max-width: 240px;
+  vertical-align: middle;
+  padding: 10px 0px 10px 0px;
 }
 
 /*
  * Image replacement
  */
-/* line 341, style.scss */
+/* line 420, style.scss */
 .ir {
   background-color: transparent;
   border: 0;
@@ -323,7 +400,7 @@ blockquote {
   *text-indent: -9999px;
 }
 
-/* line 349, style.scss */
+/* line 428, style.scss */
 .ir:before {
   content: "";
   display: block;
